# robustnet

./: .readthedocs.yaml  README.md  README.rst  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: build_model.ipynb  conf.py  evaluate_robustness.ipynb  index.rst  installation.rst  parameterize_model.ipynb
models/e_coli/: e_coli_model.xlsx  flux_bounds.xlsx  measured_enzymes.xlsx  measured_fluxes.xlsx  measured_kinetic_parameters.xlsx  measured_metabolites.xlsx
models/synechocystis/: flux_bounds.xlsx  measured_enzymes.xlsx  measured_fluxes.xlsx  measured_kinetic_parameters.xlsx  measured_metabolites.xlsx  synechocystis_model.xlsx
scripts/: ecoli_robustness.py  synechocystis_robustness.py
src/robustnet/: __init__.py  kinetics.py  model.py  sampling.py  sensitivity.py  utils.py
