[metadata]
name = robustnet
version = 0.2.0
author = Chao Wu
author_email = chaowu09@gmail.com
description = RobustNet is a package for multi-omics-informed metabolic robustness analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 
    metabolic robustness
    multi-omics
    bayesian inference
    sensitivity
    continuation method
    metabolism
    biology
license = GNU General Public License v3.0
url = https://github.com/Chaowu88/robustnet
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
python_requires = >= 3.10, <= 3.13
install_requires =
    numpy >= 1.20.2, <= 1.26.4
    pandas >= 1.0.5, <= 2.2.3
    sympy >= 1.6.1, <= 1.13.3
    scipy >= 1.10.1, <= 1.15.1
    pymc >= 5.15.1, <= 5.21.0
    pytensor >= 2.22.1, < 2.29.0
    arviz >= 0.18.0, <= 0.20.0
    h5py >= 3.11.0, <= 3.16.0
    seaborn <= 0.13.2
    tqdm <= 4.67.1
    multiprocess >= 0.70.14, <= 0.70.17
    openpyxl
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
